cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09279_208576783.yaml
Resources:
  JupyterHubVpcD2BF844D:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/Resource
  JupyterHubVpcPublicSubnet1SubnetD1FD552B:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1/Subnet
  JupyterHubVpcPublicSubnet1RouteTable298312C8:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1/RouteTable
  JupyterHubVpcPublicSubnet1RouteTableAssociationA07F63A1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPublicSubnet1RouteTable298312C8
      SubnetId:
        Ref: JupyterHubVpcPublicSubnet1SubnetD1FD552B
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1/RouteTableAssociation
  JupyterHubVpcPublicSubnet1DefaultRoute657654A3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPublicSubnet1RouteTable298312C8
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: JupyterHubVpcIGW4CA0409C
    DependsOn:
      - JupyterHubVpcVPCGW67394A3D
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1/DefaultRoute
  JupyterHubVpcPublicSubnet1EIP65025C7C:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1/EIP
  JupyterHubVpcPublicSubnet1NATGatewayA42EFAEF:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - JupyterHubVpcPublicSubnet1EIP65025C7C
          - AllocationId
      SubnetId:
        Ref: JupyterHubVpcPublicSubnet1SubnetD1FD552B
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet1/NATGateway
  JupyterHubVpcPublicSubnet2Subnet2237C7CF:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet2
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet2/Subnet
  JupyterHubVpcPublicSubnet2RouteTable05F6BBA7:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet2/RouteTable
  JupyterHubVpcPublicSubnet2RouteTableAssociationB720EBA0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPublicSubnet2RouteTable05F6BBA7
      SubnetId:
        Ref: JupyterHubVpcPublicSubnet2Subnet2237C7CF
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet2/RouteTableAssociation
  JupyterHubVpcPublicSubnet2DefaultRouteD4851BD1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPublicSubnet2RouteTable05F6BBA7
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: JupyterHubVpcIGW4CA0409C
    DependsOn:
      - JupyterHubVpcVPCGW67394A3D
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PublicSubnet2/DefaultRoute
  JupyterHubVpcPrivateSubnet1Subnet419974F8:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet1
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet1/Subnet
  JupyterHubVpcPrivateSubnet1RouteTableC3A9A897:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet1/RouteTable
  JupyterHubVpcPrivateSubnet1RouteTableAssociationFC0FD080:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPrivateSubnet1RouteTableC3A9A897
      SubnetId:
        Ref: JupyterHubVpcPrivateSubnet1Subnet419974F8
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet1/RouteTableAssociation
  JupyterHubVpcPrivateSubnet1DefaultRoute8F843C29:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPrivateSubnet1RouteTableC3A9A897
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: JupyterHubVpcPublicSubnet1NATGatewayA42EFAEF
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet1/DefaultRoute
  JupyterHubVpcPrivateSubnet2Subnet089C3840:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet2
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet2/Subnet
  JupyterHubVpcPrivateSubnet2RouteTableB2C985B0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet2/RouteTable
  JupyterHubVpcPrivateSubnet2RouteTableAssociation169C139F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPrivateSubnet2RouteTableB2C985B0
      SubnetId:
        Ref: JupyterHubVpcPrivateSubnet2Subnet089C3840
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet2/RouteTableAssociation
  JupyterHubVpcPrivateSubnet2DefaultRoute5944D6F1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: JupyterHubVpcPrivateSubnet2RouteTableB2C985B0
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: JupyterHubVpcPublicSubnet1NATGatewayA42EFAEF
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/PrivateSubnet2/DefaultRoute
  JupyterHubVpcIGW4CA0409C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: JupyterhubEcsStack/JupyterHubVpc
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/IGW
  JupyterHubVpcVPCGW67394A3D:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: JupyterHubVpcD2BF844D
      InternetGatewayId:
        Ref: JupyterHubVpcIGW4CA0409C
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubVpc/VPCGW
  JupyterHubCluster2E95EF56:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubCluster/Resource
  NotebookTaskDefinitionTaskRole4C039F51:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/NotebookTaskDefinition/TaskRole/Resource
  NotebookTaskDefinition99556FDF:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Command:
            - jupyterhub-singleuser
          Environment:
            - Name: JUPYTERHUB_API_TOKEN
              Value: 267a1b3d8b28ddb6fee7063fb2c68001d1a4829df70d766dd2502c33bd92e615
            - Name: JUPYTERHUB_CLIENT_ID
              Value: whoami-oauth-client-test
          Essential: true
          Image: jupyter/minimal-notebook
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: NotebookTaskDefinitionNotebookContainerLogGroup37824798
              awslogs-stream-prefix: notebook
              awslogs-region:
                Ref: AWS::Region
          Name: NotebookContainer
          PortMappings:
            - ContainerPort: 8888
              HostPort: 8888
              Protocol: tcp
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - NotebookTaskDefinitionExecutionRole006CE00E
          - Arn
      Family: JupyterhubEcsStackNotebookTaskDefinitionDF2E9F5B
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - NotebookTaskDefinitionTaskRole4C039F51
          - Arn
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/NotebookTaskDefinition/Resource
  NotebookTaskDefinitionNotebookContainerLogGroup37824798:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/NotebookTaskDefinition/NotebookContainer/LogGroup/Resource
  NotebookTaskDefinitionExecutionRole006CE00E:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/NotebookTaskDefinition/ExecutionRole/Resource
  NotebookTaskDefinitionExecutionRoleDefaultPolicy6AD698B6:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - NotebookTaskDefinitionNotebookContainerLogGroup37824798
                - Arn
        Version: "2012-10-17"
      PolicyName: NotebookTaskDefinitionExecutionRoleDefaultPolicy6AD698B6
      Roles:
        - Ref: NotebookTaskDefinitionExecutionRole006CE00E
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/NotebookTaskDefinition/ExecutionRole/DefaultPolicy/Resource
  NBSecurityGroupF51D6717:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup  for the notebook servers
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: JupyterHubVpcD2BF844D
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/NBSecurityGroup/Resource
  NBSecurityGroupfromJupyterhubEcsStackJupyterHubServiceSecurityGroupF83D01D6Allowfromhub962B8E87:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from JupyterhubEcsStackJupyterHubServiceSecurityGroupF83D01D6:Allow from hub
      FromPort: 8888
      GroupId:
        Fn::GetAtt:
          - NBSecurityGroupF51D6717
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - JupyterHubServiceSecurityGroup955F455B
          - GroupId
      ToPort: 8888
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/NBSecurityGroup/from JupyterhubEcsStackJupyterHubServiceSecurityGroupF83D01D6:Allow from hub
  HubTaskDefinitionTaskRole2126FF92:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/HubTaskDefinition/TaskRole/Resource
  HubTaskDefinitionTaskRoleDefaultPolicyB7A2E6E6:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecs:RunTask
              - ecs:StopTask
              - ecs:DescribeTask
              - ec2:DescribeNetworkInterfaces
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: HubTaskDefinitionTaskRoleDefaultPolicyB7A2E6E6
      Roles:
        - Ref: HubTaskDefinitionTaskRole2126FF92
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/HubTaskDefinition/TaskRole/DefaultPolicy/Resource
  HubTaskDefinitionE9098AE7:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Command:
            - jupyterhub
          Environment:
            - Name: ECS_CLUSTER
              Value:
                Ref: JupyterHubCluster2E95EF56
            - Name: TASK_DEF_ARN
              Value:
                Ref: NotebookTaskDefinition99556FDF
            - Name: AWS_REGION
              Value:
                Ref: AWS::Region
            - Name: TASK_SUBNETS
              Value:
                Fn::Join:
                  - ""
                  - - Ref: JupyterHubVpcPrivateSubnet1Subnet419974F8
                    - ","
                    - Ref: JupyterHubVpcPrivateSubnet2Subnet089C3840
            - Name: TASK_SECURITY_GROUP
              Value:
                Fn::GetAtt:
                  - NBSecurityGroupF51D6717
                  - GroupId
            - Name: JUPYTERHUB_API_TOKEN
              Value: 267a1b3d8b28ddb6fee7063fb2c68001d1a4829df70d766dd2502c33bd92e615
            - Name: JUPYTERHUB_CLIENT_ID
              Value: whoami-oauth-client-test
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 4
                    - Fn::Split:
                        - ":"
                        - Fn::Join:
                            - ""
                            - - "arn:"
                              - Ref: AWS::Partition
                              - ":ecr:"
                              - Ref: AWS::Region
                              - ":"
                              - Ref: AWS::AccountId
                              - :repository/
                              - Fn::GetAtt:
                                  - HubTaskDefinitionHubContainerAssetImageAdoptRepository33A0FCB4
                                  - RepositoryName
                - .dkr.ecr.
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - ":"
                        - Fn::Join:
                            - ""
                            - - "arn:"
                              - Ref: AWS::Partition
                              - ":ecr:"
                              - Ref: AWS::Region
                              - ":"
                              - Ref: AWS::AccountId
                              - :repository/
                              - Fn::GetAtt:
                                  - HubTaskDefinitionHubContainerAssetImageAdoptRepository33A0FCB4
                                  - RepositoryName
                - "."
                - Ref: AWS::URLSuffix
                - /
                - Fn::GetAtt:
                    - HubTaskDefinitionHubContainerAssetImageAdoptRepository33A0FCB4
                    - RepositoryName
                - "@sha256:"
                - Fn::Select:
                    - 1
                    - Fn::Split:
                        - "@sha256:"
                        - Ref: HubTaskDefinitionHubContainerAssetImageImageName79284AC4
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: HubTaskDefinitionHubContainerLogGroupA5DE3B76
              awslogs-stream-prefix: jupyterhub
              awslogs-region:
                Ref: AWS::Region
          Name: HubContainer
          PortMappings:
            - ContainerPort: 8000
              HostPort: 8000
              Protocol: tcp
            - ContainerPort: 8081
              HostPort: 8081
              Protocol: tcp
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - HubTaskDefinitionExecutionRole07669A61
          - Arn
      Family: JupyterhubEcsStackHubTaskDefinition0E05A233
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - HubTaskDefinitionTaskRole2126FF92
          - Arn
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/HubTaskDefinition/Resource
  HubTaskDefinitionHubContainerAssetImageAdoptRepository33A0FCB4:
    Type: Custom::ECRAdoptedRepository
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c52BE89E9
          - Arn
      RepositoryName:
        Fn::Select:
          - 0
          - Fn::Split:
              - "@sha256:"
              - Ref: HubTaskDefinitionHubContainerAssetImageImageName79284AC4
    DependsOn:
      - AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleDefaultPolicy6BC8737C
      - AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleD788AA17
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/HubTaskDefinition/HubContainer/AssetImage/AdoptRepository/Resource/Default
  HubTaskDefinitionHubContainerLogGroupA5DE3B76:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/HubTaskDefinition/HubContainer/LogGroup/Resource
  HubTaskDefinitionExecutionRole07669A61:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/HubTaskDefinition/ExecutionRole/Resource
  HubTaskDefinitionExecutionRoleDefaultPolicy0007BB5E:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/
                  - Fn::GetAtt:
                      - HubTaskDefinitionHubContainerAssetImageAdoptRepository33A0FCB4
                      - RepositoryName
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - HubTaskDefinitionHubContainerLogGroupA5DE3B76
                - Arn
        Version: "2012-10-17"
      PolicyName: HubTaskDefinitionExecutionRoleDefaultPolicy0007BB5E
      Roles:
        - Ref: HubTaskDefinitionExecutionRole07669A61
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/HubTaskDefinition/ExecutionRole/DefaultPolicy/Resource
  AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleD788AA17:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c/ServiceRole/Resource
  AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleDefaultPolicy6BC8737C:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:GetRepositoryPolicy
              - ecr:SetRepositoryPolicy
              - ecr:DeleteRepository
              - ecr:ListImages
              - ecr:BatchDeleteImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/
                  - Fn::Select:
                      - 0
                      - Fn::Split:
                          - "@sha256:"
                          - Ref: HubTaskDefinitionHubContainerAssetImageImageName79284AC4
        Version: "2012-10-17"
      PolicyName: AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleDefaultPolicy6BC8737C
      Roles:
        - Ref: AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleD788AA17
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c/ServiceRole/DefaultPolicy/Resource
  AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c52BE89E9:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Ref: AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cCodeS3Bucket92AB06B6
        S3Key:
          Fn::Join:
            - ""
            - - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cCodeS3VersionKey393B7276
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cCodeS3VersionKey393B7276
      Handler: handler.handler
      Role:
        Fn::GetAtt:
          - AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleD788AA17
          - Arn
      Runtime: nodejs8.10
      Timeout: 300
    DependsOn:
      - AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleDefaultPolicy6BC8737C
      - AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cServiceRoleD788AA17
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c/Resource
      aws:asset:path: asset.a65ac4beaa2b5a7b20eebf3b7c5c1c886b71428afa377e02dab0d10ab3be57e7
      aws:asset:property: Code
  JupyterHubService9EE84031:
    Type: AWS::ECS::Service
    Properties:
      TaskDefinition:
        Ref: HubTaskDefinitionE9098AE7
      Cluster:
        Ref: JupyterHubCluster2E95EF56
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Fn::GetAtt:
                - JupyterHubServiceSecurityGroup955F455B
                - GroupId
          Subnets:
            - Ref: JupyterHubVpcPublicSubnet1SubnetD1FD552B
            - Ref: JupyterHubVpcPublicSubnet2Subnet2237C7CF
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubService/Service
  JupyterHubServiceSecurityGroup955F455B:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: JupyterhubEcsStack/JupyterHubService/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:Allow from world
          FromPort: 8000
          IpProtocol: tcp
          ToPort: 8000
      VpcId:
        Ref: JupyterHubVpcD2BF844D
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubService/SecurityGroup/Resource
  JupyterHubServiceSecurityGroupfromJupyterhubEcsStackNBSecurityGroup5F9DB2DEAllowfromnotebooks3CCD4C73:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from JupyterhubEcsStackNBSecurityGroup5F9DB2DE:Allow from notebooks
      FromPort: 8081
      GroupId:
        Fn::GetAtt:
          - JupyterHubServiceSecurityGroup955F455B
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - NBSecurityGroupF51D6717
          - GroupId
      ToPort: 8081
    Metadata:
      aws:cdk:path: JupyterhubEcsStack/JupyterHubService/SecurityGroup/from JupyterhubEcsStackNBSecurityGroup5F9DB2DE:Allow from notebooks
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.8.0,@aws-cdk/aws-applicationautoscaling=1.8.0,@aws-cdk/aws-autoscaling=1.8.0,@aws-cdk/aws-autoscaling-common=1.8.0,@aws-cdk/aws-autoscaling-hooktargets=1.8.0,@aws-cdk/aws-cloudformation=1.8.0,@aws-cdk/aws-cloudwatch=1.8.0,@aws-cdk/aws-ec2=1.8.0,@aws-cdk/aws-ecr=1.8.0,@aws-cdk/aws-ecr-assets=1.8.0,@aws-cdk/aws-ecs=1.8.0,@aws-cdk/aws-elasticloadbalancingv2=1.8.0,@aws-cdk/aws-events=1.8.0,@aws-cdk/aws-iam=1.8.0,@aws-cdk/aws-kms=1.8.0,@aws-cdk/aws-lam [...]
    Condition: CDKMetadataAvailable
Parameters:
  HubTaskDefinitionHubContainerAssetImageImageName79284AC4:
    Type: String
    Description: ECR repository name and tag asset "JupyterhubEcsStack/HubTaskDefinition/HubContainer/AssetImage"
  AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cCodeS3Bucket92AB06B6:
    Type: String
    Description: S3 bucket for asset "JupyterhubEcsStack/AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c/Code"
  AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cCodeS3VersionKey393B7276:
    Type: String
    Description: S3 key for asset version "JupyterhubEcsStack/AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c/Code"
  AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62cCodeArtifactHash8BCBAA49:
    Type: String
    Description: Artifact hash for asset "JupyterhubEcsStack/AdoptEcrRepositorydbc60defc59544bcaa5c28c95d68f62c/Code"
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
